--- a/LessonMonitor.API/LessonMonitor.API.csproj
+++ b/LessonMonitor.API/LessonMonitor.API.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>f07eecc2-40b4-4640-be83-5be5c233076f</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LessonMonitor.BL\LessonMonitor.BL.csproj" />
